name:                vyacheslavhashov-me
version:             0.1.0.0
synopsis:            My personal page

homepage:            https://vyacheslavhashov.me
author:              Vyacheslav Hashov
maintainer:          vyacheslavhashov@gmail.com

category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable vyacheslavhashov-me
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -O0 -j=2
  build-depends:       base
                       , directory
                       , filepath
                       , text
                       , bytestring
                       , base64-bytestring
                       , blaze-html
                       , clay
  default-language:    Haskell2010

